cmake_minimum_required(VERSION 3.28)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 23)

add_executable(2024_day1 2024/day1.cpp)
add_executable(2024_day2 2024/day2.cpp)
add_executable(2024_day3 2024/day3.cpp)
add_executable(2024_day4 2024/day4.cpp)
add_executable(2024_day5 2024/day5.cpp)
add_executable(2024_day6 2024/day6.cpp)
add_executable(2024_day7 2024/day7.cpp)
add_executable(2024_day8 2024/day8.cpp)
add_executable(2024_day9 2024/day9.cpp)
add_executable(2024_day10 2024/day10.cpp)
